added prisma (tailwind was on scaffold project)

--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
 		"test": "npm run test:unit -- --run && npm run test:e2e",
 		"test:e2e": "playwright test",
 		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"build-storybook": "storybook build",
+		"prisma:generate": "prisma generate",
+		"prisma:migrate": "prisma migrate dev",
+		"prisma:studio": "prisma studio",
+		"postinstall": "prisma generate"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -34,7 +38,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"@tailwindcss/vite": "^4.0.0",
+		"@tailwindcss/vite": "^4.1.7",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
 		"@types/node": "^18",
@@ -50,7 +54,7 @@
 		"storybook": "^8.6.14",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
+		"tailwindcss": "^4.1.7",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
@@ -58,10 +62,12 @@
 	},
 	"dependencies": {
 		"@inlang/paraglide-js": "^2.0.0",
+		"@prisma/client": "^6.8.2",
 		"@trpc/client": "^10.45.2",
 		"@trpc/server": "^10.45.2",
 		"html5-qrcode": "^2.3.8",
-		"trpc-sveltekit": "^3.6.3"
+		"trpc-sveltekit": "^3.6.3",
+		"zod": "^3.25.1"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
