--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"prisma": "6.8.2",
 		"storybook": "^8.6.14",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
@@ -61,7 +62,7 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
-		"@prisma/client": "^6.8.2",
+		"@prisma/client": "6.8.2",
 		"@tanstack/svelte-query": "^5.76.0",
 		"@trpc/client": "^11.1.2",
 		"@trpc/server": "^11.1.2",
