removed prisma, adde mikro orm

--- a/package.json
+++ b/package.json
@@ -13,18 +13,17 @@
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
+		"test:mikro": "./test-mikro.sh",
 		"test": "npm run test:unit -- --run && npm run test:e2e",
 		"test:e2e": "playwright test",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
-		"prisma:generate": "npx prisma generate",
-		"prisma:migrate": "npx prisma migrate dev",
-		"prisma:studio": "npx prisma studio",
 		"clean-cache": "rm -rf .svelte-kit node_modules/.vite"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@mikro-orm/cli": "^6.4.16",
 		"@playwright/test": "^1.49.1",
 		"@storybook/addon-essentials": "^8.6.14",
 		"@storybook/addon-interactions": "^8.6.14",
@@ -34,8 +33,8 @@
 		"@storybook/sveltekit": "^8.6.14",
 		"@storybook/test": "^8.6.14",
 		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@sveltejs/kit": "^2.21.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.1.7",
@@ -51,18 +50,20 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"prisma": "6.8.2",
 		"storybook": "^8.6.14",
-		"svelte": "^5.0.0",
+		"svelte": "^5.33.10",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.1.7",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
-		"@prisma/client": "6.8.2",
+		"@mikro-orm/core": "^6.4.16",
+		"@mikro-orm/postgresql": "^6.4.16",
+		"@mikro-orm/reflection": "^6.4.16",
 		"@tanstack/svelte-query": "^5.76.0",
 		"@trpc/client": "^11.1.2",
 		"@trpc/server": "^11.1.2",
