--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
 		"test:e2e": "playwright test",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
-		"clean-cache": "rm -rf .svelte-kit node_modules/.vite"
+		"clean-cache": "rm -rf .svelte-kit node_modules/.vite",
+		"migration:create": "node --no-warnings=ExperimentalWarning --loader ts-node/esm ./node_modules/.bin/mikro-orm migration:create --config=./src/mikro-orm.config.test.ts",
+		"migration:up": "node --no-warnings=ExperimentalWarning --loader ts-node/esm ./node_modules/.bin/mikro-orm migration:up --config=./src/mikro-orm.config.test.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@mikro-orm/cli": "^6.4.16",
+		"@mikro-orm/migrations": "^6.4.16",
 		"@playwright/test": "^1.49.1",
 		"@storybook/addon-essentials": "^8.6.14",
 		"@storybook/addon-interactions": "^8.6.14",
@@ -55,6 +58,7 @@
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.1.7",
 		"ts-node": "^10.9.2",
+		"tsx": "^4.19.4",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
