--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
 		"lint": "prettier --check . && eslint .",
-		"test:unit": "vitest",
-		"test:mikro": "./test-mikro.sh",
+		"test:unit": "vitest --exclude \"**/*.entity.spec.ts\"",
+		"test:mikro": "vitest run --no-file-parallelism src/entities",
 		"test": "npm run test:unit -- --run && npm run test:e2e",
 		"test:e2e": "playwright test",
 		"storybook": "storybook dev -p 6006",
